--- a/workspace/Dockerfile
+++ b/workspace/Dockerfile
@@ -122,6 +122,7 @@ RUN apt-get install -y libcairo2-dev libjpeg62-dev libgif-dev libpq-dev \
 RUN wget -qO- https://toolbelt.heroku.com/install-ubuntu.sh | sh -e && \
     sudo -u ubuntu -i bash -l -c "npm install -g npm@3.3.4" && \
     sudo -u ubuntu -i bash -l -c "npm install jitsu@0.13.15 -g" && \
+    sudo -u ubuntu -i bash -l -c "npm install mocha@2.3.3 -g" && \
     sudo -u ubuntu -i bash -l -c "npm install azure-cli@0.8.2 -g" && \
     sudo -u ubuntu -i bash -l -c "npm install grunt@0.4.4 -g" && \
     sudo -u ubuntu -i bash -l -c "npm install grunt-cli@0.1.13  -g" && \
