--- a/workspace/files/home/ubuntu/.ssh/config
+++ b/workspace/files/home/ubuntu/.ssh/config
@@ -5,3 +5,11 @@ Host github.com
   IdentityFile ~/.ssh/id_rsa
   TCPKeepAlive yes
   IdentitiesOnly yes
+  UserKnownHostsFile /dev/null
+  StrictHostKeyChecking no
+  
+Host bitbucket.org
+  Hostname bitbucket.org
+  IdentitiesOnly yes
+  UserKnownHostsFile /dev/null
+  StrictHostKeyChecking no
