--- a/ws-python/Dockerfile
+++ b/ws-python/Dockerfile
@@ -5,5 +5,5 @@ RUN pip install Django==1.8.3
 
 ADD ./files /home/ubuntu
 
-RUN chown -R ubuntu:ubuntu /home/ubuntu && \
-    chown -R ubuntu:ubuntu /home/ubuntu
+RUN chown -R ubuntu:ubuntu /home/ubuntu/workspace && \
+    chown -R ubuntu:ubuntu /home/ubuntu/init.sh
